home page html and css added

--- a/signup.html
+++ b/signup.html
@@ -32,6 +32,26 @@
                 <h4>allready have an account please login here <a href="index.html">Login</a></h4>
             </form>
         </div>
+        <script>
+            let arr=JSON.parse(localStorage.getItem("users"))||[]
+            let form=document.getElementById("form")
+            function userDetails(e){
+                e.preventDefault()
+             let obj={
+                name:document.getElementById("name").value,
+                mobile:document.getElementById("mobile").value,
+                email:document.getElementById("email").value,
+                password:document.getElementById("password").value
+             }
+             arr.push(obj)
+             localStorage.setItem("users",JSON.stringify(arr))
+             alert("Data Saved Sacussfully")
+             form.reset()
+            }
+            let btn2=document.getElementById("btn2")
+            btn2.addEventListener("click",userDetails)
+            
+        </script>
         </body>
         
         </html>
