signup form style and script added

--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Form</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="signup.css">
 </head>
 <body>
         <div class="container">
@@ -28,7 +28,7 @@
                 </div>
                 <div class="button_group">
                     <button class="btn btn2" id="btn2" >Sign Up</button>
-                </div>
+                </div><br>
                 <h4>allready have an account please login here <a href="index.html">Login</a></h4>
             </form>
         </div>
