login form script added

--- a/home.html
+++ b/home.html
@@ -31,8 +31,8 @@
         <a href="./index.html"><button id="logout">Logout</button></a>
       </nav>
       <div class="hero_section">
-        <h1>Welcome To our Website</h1>
-        <h2>Our Mission</h2>
+        <h1>Welcome To our Website</h1><br><br>
+        <h2>Our Mission</h2><br>
         <p>Our mission is to provide a platform for the people to share their ideas and thoughts</p>
         <p>Created By Mukesh Kumar Jat 
           <br>Mobile No. 8441925100
