final project complete with media quary mobile and laptop sereen

--- a/home.html
+++ b/home.html
@@ -42,7 +42,8 @@
           <br>Email:- mjatsuper@gmail.com
         </p>
       </div>
-      <div class="additional_form">
+      <div class="apicall" id="apicall"></div>
+      <div class="additional_form" id="additional_form">
         <div class="img_div">
             <img src="https://media.istockphoto.com/id/1463050489/photo/online-application-form-for-modish-registration.jpg?s=612x612&w=0&k=20&c=DKPBOubU6fsaY8Zmrp263zWm79zIjOf4URSUfcwupGQ=" alt="">
         </div>
@@ -63,7 +64,6 @@
                 <button id="btn_contect">Contect Us</button>
               </div>
       </div>
-      <div class="apicall" id="apicall"></div>
       <div class="footer">
         <footer id="main_footer">
           <div class="about">
@@ -144,6 +144,8 @@
         h4.innerText = ele.title;
         let p=document.createElement("p")
         p.innerText=ele.description
+      
+        
         let buy=document.createElement("button")
         buy.id="buy"
         buy.innerText="Buy Now"
