--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         password:document.getElementById("password").value
      }
      if(newobj.email==""||newobj.password==""){
-        alert("please fill all the fields")
+        alert("please fill all the fields");
         return
      }
      let ValueCheck=arrForLogin.find((ele)=>
