--- a/home.html
+++ b/home.html
@@ -10,9 +10,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container1">
+    <div class="container1" data-aos="fade-down"
+    data-aos-easing="linear"
+    data-aos-duration="1500">
       <nav class="navbar">
         <div class="logo">
           <img src="./Screenshot 2024-07-18 105302.png" alt="logo" />
@@ -33,13 +36,17 @@
         <h5 id="LoginName"></h5>
         <a href="./index.html"><button id="logout">Logout</button></a>
       </nav>
-      <div class="hero_section">
+      <div class="hero_section" data-aos="fade-down"
+      data-aos-easing="linear"
+      data-aos-duration="1500">
         <h1>Welcome To our Website</h1>
       </div>
       <div class="apicall" id="apicall"></div>
-      <div class="additional_form" id="additional_form">
+      <div class="additional_form" id="additional_form" >
         <div class="main_form">
-          <form class="form_div">
+          <form class="form_div" data-aos="fade-right"
+          data-aos-easing="linear"
+          data-aos-duration="2500">
             <label for="">Name<span>*</span>:-</label><br /><input
               type="text"
               placeholder="Enter Your Name"
@@ -57,7 +64,9 @@
             </div>
           </form>
         </div>
-        <div class="img_div">
+        <div class="img_div" data-aos="fade-left"
+        data-aos-easing="linear"
+        data-aos-duration="2500" >
           <img
             src="https://media.istockphoto.com/id/1463050489/photo/online-application-form-for-modish-registration.jpg?s=612x612&w=0&k=20&c=DKPBOubU6fsaY8Zmrp263zWm79zIjOf4URSUfcwupGQ="
             alt=""
@@ -113,6 +122,10 @@
         </footer>
       </div>
     </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   </body>
   <script>
     let loggedInuser = JSON.parse(localStorage.getItem("loggedInuser"));
@@ -161,4 +174,5 @@
     }
     displayData(arr);
   </script>
+  
 </html>
